# LegacyLens

./: .gitignore  README.md  main.py  pyproject.toml  server.py
examples/: cpp_to_python.py  demo.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/refactor/: page.tsx
src/: __init__.py
src/agents/: __init__.py  archaeologist.py  architect.py  engineer.py  scribe.py  validator.py
src/core/: __init__.py  graph.py  state.py
src/memory/: __init__.py  manager.py
src/models/: __init__.py  llm.py
src/prompts/: __init__.py  templates.py
tests/: test_graph.py  test_memory.py  test_state.py
