[project]
name = "legacylens"
version = "0.1.0"
description = "Agentic workflow for modernizing legacy C++/Java to Python/Next.js"
authors = [{ name = "LegacyLens Team" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "llama-cpp-python>=0.2.50",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.26.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.10.0",
    "mlx-lm>=0.10.0",
]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
]

[project.scripts]
legacylens = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
